# SLS-Hosting

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  app.json  docker-compose.yml  pyproject.toml  requirements.txt
api/app/: main.py
api/app/core/: config.py
api/app/routers/: deployments.py  projects.py  system.py
api/app/schemas/: deployment.py  project.py
api/app/services/: storage.py
bot/: main.py
bot/app/: main.py
bot/app/core/: config.py
bot/app/handlers/: admin.py  broadcast.py  clone.py  repo.py  start.py
bot/app/services/: deployer.py  persistence.py  repo_manager.py  repo_providers.py  runtime_registry.py  scanner.py  scheduler.py  user_store.py
bot/app/ui/: keyboards.py  layouts.py  progress.py
config/: messages.py
dashboard/: index.html  package.json
dashboard/src/: main.jsx
dashboard/src/pages/: App.jsx
dashboard/src/styles/: globals.css
models/: __init__.py  database.py
