[project]
name = "sls-hosting"
version = "0.1.0"
description = "Telegram file hosting and bot hosting ecosystem"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.7.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "motor>=3.5.0",
  "psutil>=6.0.0",
  "python-multipart>=0.0.9",
  "aiofiles>=24.1.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1"
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["bot", "api"]
